--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vim/bundle/fugitive"]
 	path = vim/bundle/fugitive
 	url = git://github.com/tpope/vim-fugitive.git
+[submodule "vim/bundle/syntax"]
+	path = vim/bundle/syntax
+	url = https://github.com/octol/vim-cpp-enhanced-highlight.git
